<?xml version="1.0"?>
<package format="3">
  <name>odom_tf_generator</name>
  <version>1.0.0</version>
  <description>The odom_tf_generator package</description>
  <maintainer email="shigeki.kobayashi619@gmail.com">ShigekiKobayashi</maintainer>
  <author>Shigeki Kobayashi</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>